--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "book-notes",
+  "version": "1.0.0",
+  "main": "index.js",
   "type": "module",
   "dependencies": {
     "axios": "^1.12.2",
@@ -6,7 +9,8 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-ejs-layouts": "^2.5.1",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "body-parser": "^1.20.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
