--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "type": "module",
   "dependencies": {
     "axios": "^1.12.2",
-    "dotenv": "^17.2.2",
+    "bcrypt": "^6.0.0",
+    "body-parser": "^1.20.2",
+    "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-ejs-layouts": "^2.5.1",
-    "pg": "^8.16.3",
-    "body-parser": "^1.20.2"
+    "express-session": "^1.18.2",
+    "node-fetch": "^3.3.2",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
